--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <li class="home-items"><a href="#contact">Feeling</a></li>
         </ul>
     </nav>
-    
+
     <header class="container__banner">
         <div class="content__banner">
             <h1 style="padding-bottom: 3vh;">Inteligencia <br> Artificial</h1>
-            <p style="color: var(--gray); letter-spacing: 1.5px; line-height: 60px; padding-bottom: 5vh;">El comienzo de una nueva era</p>
+            <p style="color: var(--gray); letter-spacing: 1.5px; line-height: 60px; padding-bottom: 5vh;">El comienzo de
+                una nueva era</p>
         </div>
         <div><img src="/assets/image/bot.svg"></div>
     </header>
@@ -31,16 +32,23 @@
             <div class="container__dark">
                 <div class="container__definicion">
                     <div class="design__vl">
-                        <div class="vl"></div>
                         <div class="circle"></div>
+                        <div class="vl"></div>
                     </div>
                     <article class="content-definicion">
                         <h2 style="margin: 0 50px 100px 0;">Definicion</h2>
-                        <p style="margin: 0 50px 0 0; letter-spacing: 1.5px; line-height: 60px;">La <strong>Inteligencia
-                                Artificial</strong> (IA) es la combinación de algoritmos planteados con el propósito
-                            decrear máquinas que presenten las mismas capacidades que el ser humano. Una tecnología que
-                            todavía nos resulta lejana y misteriosa, pero que desde hace unos años está presente en
-                            nuestro día a día a todas horas.</p>
+                        <p style="margin: 0 50px 0 0; letter-spacing: 1.2px; line-height: 50px;">La <strong>Inteligencia
+                                Artificial</strong> (IA) es un campo de la ciencia relacionado con la creación de
+                            computadoras y máquinas que pueden razonar, aprender y actuar de una manera que normalmente
+                            requeriría inteligencia humana o que involucre datos cuya escala exceda lo que los humanos
+                            pueden analizar. <br><br> La IA es un campo amplio que abarca muchas disciplinas diferentes,
+                            incluidas la informática, el análisis de datos y las estadísticas, la ingeniería de hardware
+                            y software, la lingüística, la neurociencia y hasta la filosofía y la psicología. <br><br>A
+                            nivel operativo para el uso empresarial, la IA es un conjunto de tecnologías que se basan
+                            principalmente en el aprendizaje automático y el aprendizaje profundo, que se usan para el
+                            análisis de datos, la generación de predicciones y previsiones, la categorización de
+                            objetos, el procesamiento de lenguaje natural, las recomendaciones, la recuperación
+                            inteligente de datos y mucho más. </p>
                     </article>
                 </div>
             </div>
@@ -51,13 +59,17 @@
                         <div style="flex: 1;" class="design__hl">
                             <div class="circle"></div>
                             <div class="hl"></div>
-                            <div class="circle"></div>
                         </div>
                         <h2 style="margin-left: 5vw;">Tipos de IA</h2>
                     </section>
 
+
                     <div class="design__tipos">
                         <article class="content-tipos">
+                            <p style="margin-bottom: 5vh;">La inteligencia artificial se puede organizar de varias
+                                maneras, según las etapas de desarrollo o las acciones que se están realizando.
+                                <br><br>Por ejemplo, se suelen reconocer cuatro etapas de desarrollo de la IA.
+                            </p>
                             <section class="tipos-lista">
                                 <ul>
                                     <li class="tipos-lista-item">
@@ -67,10 +79,14 @@
                                         <div class="item-text">
                                             <h3>Memoria limitada</h3>
                                             <p>Se considera que la mayor parte de la IA moderna es de memoria limitada.
-                                                Puede usar la memoria para mejorar con el tiempo mediante el entrenamiento
-                                                con datos nuevos, por lo general, a través de una red neuronal artificial o
-                                                algún otro modelo de entrenamiento. El aprendizaje profundo, un subconjunto
-                                                del aprendizaje automático, se considera inteligencia artificial con memoria
+                                                Puede usar la memoria para mejorar con el tiempo mediante el
+                                                entrenamiento
+                                                con datos nuevos, por lo general, a través de una red neuronal
+                                                artificial o
+                                                algún otro modelo de entrenamiento. El aprendizaje profundo, un
+                                                subconjunto
+                                                del aprendizaje automático, se considera inteligencia artificial con
+                                                memoria
                                                 limitada.</p>
                                         </div>
                                     </li>
@@ -78,7 +94,8 @@
                                         <div class="item-text">
                                             <h3>Maquinas Reactivas</h3>
                                             <p>IA limitada que solo reacciona a diferentes tipos de estímulos basados en
-                                                reglas preprogramadas. No usa memoria y, por lo tanto, no puede aprender con
+                                                reglas preprogramadas. No usa memoria y, por lo tanto, no puede aprender
+                                                con
                                                 datos nuevos. Deep Blue de IBM, que venció al campeón de ajedrez Garry
                                                 Kasparov en 1997, fue un ejemplo de una máquina reactiva.</p>
                                         </div>
@@ -92,10 +109,14 @@
                                         </div>
                                         <div class="item-text">
                                             <h3>Teoría de la mente</h3>
-                                            <p>Actualmente no existe IA con teoría de la mente, pero se están investigando
-                                                distintas posibilidades. El término hace referencia a IA que puede emular la
-                                                mente humana y tiene capacidades de toma de decisiones similares a las de un
-                                                ser humano, lo cual incluye reconocer y recordar emociones, y reaccionar en
+                                            <p>Actualmente no existe IA con teoría de la mente, pero se están
+                                                investigando
+                                                distintas posibilidades. El término hace referencia a IA que puede
+                                                emular la
+                                                mente humana y tiene capacidades de toma de decisiones similares a las
+                                                de un
+                                                ser humano, lo cual incluye reconocer y recordar emociones, y reaccionar
+                                                en
                                                 situaciones sociales como lo haría un ser humano.</p>
                                         </div>
                                     </li>
@@ -103,8 +124,10 @@
                                         <div class="item-text">
                                             <h3>Autoconocimiento</h3>
                                             <p>Un paso más allá de la IA con teoría de la mente, el concepto de IA con
-                                                autoconocimiento describe una máquina mítica que tiene conocimiento de su
-                                                propia existencia y tiene las capacidades intelectuales y emocionales de un
+                                                autoconocimiento describe una máquina mítica que tiene conocimiento de
+                                                su
+                                                propia existencia y tiene las capacidades intelectuales y emocionales de
+                                                un
                                                 ser humano. Al igual que la IA con teoría de la mente, la IA con
                                                 autoconciencia no existe en la actualidad.</p>
                                         </div>
@@ -118,18 +141,145 @@
                         </article>
                         <div style="margin: 5vh 0 0 10vw;" class="design__vl">
                             <div class="vl"></div>
+                            <div class="circle"></div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
-            <div class="container__dark">
+            <div class="container__darkgray">
                 <article class="container__modelos">
-                    <div class="modelos-text">
-                        <h2>Modelos</h2>
-                        <p>Cuando las empresas hablan de IA, suelen hablar de "datos de entrenamiento". Pero ¿qué significa eso? Recuerda que la inteligencia artificial con memoria limitada es una IA que mejora con el tiempo, ya que se entrena con datos nuevos. El aprendizaje automático es un subconjunto de la inteligencia artificial que usa algoritmos para entrenar datos y obtener resultados.</p>
+                    <div class="modelos-title">
+                        <h2 style="margin: 0 5vw 0 0;">Modelos</h2>
+                        <div style="flex: 1;" class="design__hl">
+                            <div class="hl"></div>
+                            <div class="circle"></div>
+                        </div>
+                    </div>
 
+                    <div class="modelos-text">
+                        <p>Cuando las empresas hablan de IA, suelen hablar de "datos de entrenamiento". Pero ¿qué
+                            significa eso? Recuerda que la inteligencia artificial con memoria limitada es una IA que
+                            mejora con el tiempo, ya que se entrena con datos nuevos. El aprendizaje automático es un
+                            subconjunto de la inteligencia artificial que usa algoritmos para entrenar datos y obtener
+                            resultados.</p>
+                    </div>
+                    <div class="modelos-list">
+                        <ul>
+                            <li>
+                                <div class="item__modelo-image">
+                                    <img  src="/assets/icons/ojo-abierto.svg" alt="">
+                                </div>
+                                <div class="item__modelo-text">
+                                    <h3>Aprendizaje supervisado</h3>
+                                    <p>Es un modelo de aprendizaje automático que asigna una entrada específica a un
+                                        resultado mediante datos de entrenamiento etiquetados (datos estructurados). En
+                                        términos simples, para entrenar un algoritmo que reconozca imágenes de gatos, se
+                                        lo alimenta con imágenes etiquetadas como gatos</p>
+                                </div>
+                            </li>
+
+
+                            <li style="margin: 0 0 0 2vw;">
+                                <div class="item__modelo-image">
+                                    <img src="/assets/icons/ojo-cerrado.svg" alt="">
+                                </div>
+                                <div class="item__modelo-text">
+                                    <h3>Aprendizaje no supervisado</h3>
+                                    <p>Es un modelo de aprendizaje automático que aprende patrones en función de datos
+                                        no etiquetados (datos no estructurados). A diferencia del aprendizaje
+                                        supervisado, el resultado final no se conoce con anticipación. En cambio, el
+                                        algoritmo aprende de los datos y los clasifica en grupos en función de diversos
+                                        atributos. Por ejemplo, el aprendizaje no supervisado es bueno para identificar
+                                        patrones y realizar modelado descriptivo. </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+            <div class="container__dark">
+                <article class="container__beneficios">
+                    <div class="beneficios-title">
+                        <div style="flex: 1;" class="design__hl">
+                            <div class="circle"></div>
+                            <div class="hl"></div>
+                        </div>
+                        <h2 style="margin: 0 5vw;">Beneficios</h2>
+                        <div style="flex: 1;" class="design__hl">
+                            <div class="hl"></div>
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+
+                    <div class="beneficios-content">
+                        <table>
+                            <tr>
+                                <th>Automatización</th>
+                                <th style="padding: 3vh 3vw;">Reduce errores humanos</th>
+                                <th>Elimina las tareas repetitivas</th>
+                            </tr>
+                            <tr>
+                                <td>La IA puede automatizar flujos de trabajo y procesos, o trabajar de forma
+                                    independiente y autónoma de un equipo humano. Por ejemplo, la IA puede ayudar a
+                                    automatizar aspectos de la seguridad cibernética mediante la supervisión y el
+                                    análisis continuos del tráfico de red. De manera similar, una fábrica inteligente
+                                    puede tener decenas de tipos diferentes de IA en uso, como robots que usan visión
+                                    artificial para navegar por las fábricas o inspeccionar productos en busca de
+                                    defectos, crear gemelos digitales o usar analítica en tiempo real para medir la
+                                    eficiencia y la producción.
+                                </td>
+
+                                <td style="padding: 0 3vw;">La IA puede eliminar errores manuales en el procesamiento de
+                                    datos, las estadísticas, el ensamblaje en la fabricación y otras tareas a través de
+                                    automatización y algoritmos que siguen los mismos procesos cada vez.
+                                </td>
+
+                                <td>La IA se puede usar para realizar tareas repetitivas, lo que libera al capital
+                                    humano a fin de que trabaje en los problemas de mayor impacto. La IA se puede usar
+                                    para automatizar procesos, como verificar documentos, transcribir llamadas
+                                    telefónicas o responder preguntas sencillas de los clientes, como “¿A qué hora
+                                    cierran?”. Con frecuencia, los robots se usan para realizar tareas “aburridas,
+                                    sucias o peligrosas” en lugar de que las haga un ser humano.
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Rápido y preciso</th>
+                                <th style="padding: 3vh 3vw;">Disponibilidad infinita</th>
+                                <th>Investigación y desarrollo acelerados</th>
+                            </tr>
+                            <tr>
+                                <td>La IA puede procesar más información de forma más rápida que un ser humano, mediante
+                                    la búsqueda de patrones y el descubrimiento de relaciones en datos que el humano
+                                    podría no detectar.
+                                </td>
+
+                                <td style="padding: 0 3vw;">La IA no tienen limitaciones en términos de horarios,
+                                    necesidad de descansar ni ningún otro factor que pueda interrumpir la labor de un
+                                    ser humano. Cuando se ejecutan en la nube, la IA y el aprendizaje automático pueden
+                                    estar “siempre activos”, y trabajar continuamente en las tareas asignadas.
+                                </td>
+
+                                <td>La capacidad de analizar grandes cantidades de datos con rapidez puede acelerar los
+                                    avances en investigación y desarrollo. Por ejemplo, la IA se usó en el modelado
+                                    predictivo de nuevos tratamientos farmacéuticos potenciales o para cuantificar el
+                                    genoma humano.
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </article>
+
+                <article class="container__conclusion">
+                    <div class="image-conclusion">
+                        <img src="assets/image/background-thre.svg" alt="">
+                    </div>
+                    <div class="content-conclusion">
+                        <h2 style="padding: 0 0 5vh 0;">Conclusion</h2>
+                        <p>Desde una perspectiva inicial, la inteligencia artificial es un tema complejo y
+                            emocionante en el que alguien que está empezando a adentrarse se encuentra. Se
+                            percata de que la inteligencia artificial implica el desarrollo de programas y
+                            sistemas que pueden aprender y tomar decisiones de forma autónoma, buscando replicar
+                            la forma en que los seres humanos piensan y resuelven problemas. </p>
                     </div>
                 </article>
             </div>
