--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <article class="content-definicion">
                         <h2 style="margin: 0 50px 100px 0;">Definicion</h2>
-                        <p style="margin: 0 50px 0 0; letter-spacing: 1.2px; line-height: 50px;">La <strong>Inteligencia
+                        <p style="margin: 0 50px 0 0;">La <strong>Inteligencia
                                 Artificial</strong> (IA) es un campo de la ciencia relacionado con la creación de
                             computadoras y máquinas que pueden razonar, aprender y actuar de una manera que normalmente
                             requeriría inteligencia humana o que involucre datos cuya escala exceda lo que los humanos
@@ -123,7 +123,7 @@
                                     <li class="tipos-lista-item">
                                         <div class="item-text">
                                             <h3>Autoconocimiento</h3>
-                                            <p>Un paso más allá de la IA con teoría de la mente, el concepto de IA con
+                                            <p>Un paso más allá de lsa IA con teoría de la mente, el concepto de IA con
                                                 autoconocimiento describe una máquina mítica que tiene conocimiento de
                                                 su
                                                 propia existencia y tiene las capacidades intelectuales y emocionales de
@@ -270,9 +270,6 @@
                 </article>
 
                 <article class="container__conclusion">
-                    <div class="image-conclusion">
-                        <img src="assets/image/background-thre.svg" alt="">
-                    </div>
                     <div class="content-conclusion">
                         <h2 style="padding: 0 0 5vh 0;">Conclusion</h2>
                         <p>Desde una perspectiva inicial, la inteligencia artificial es un tema complejo y
@@ -281,9 +278,38 @@
                             sistemas que pueden aprender y tomar decisiones de forma autónoma, buscando replicar
                             la forma en que los seres humanos piensan y resuelven problemas. </p>
                     </div>
+                    <div class="image-conclusion">
+                        <img src="assets/image/background-thre.svg" alt="">
+                    </div>
                 </article>
             </div>
-        </div>
+            <div class="container__darkgray">
+                <article class="container__feedback">
+                    <div class="content-feedback">
+                        <h2 style="margin: 0 0 2vh 0; text-align: right;">Dejanos tu opinion</h2>
+                        <form action="">
+                            <div class="usuario">
+                                <label for="et_nombre">Nombre</label>
+                                <input type="email" id="et_email">
+
+                                <label for="et_email">Correo</label>
+                                <input type="email" id="et_email">
+                            </div>
+
+                            <div class="comentario">
+                                <label for="et_email">Comentario</label>
+                                <textarea id="et_feedback" cols="30" rows="10"></textarea>
+                            </div>
+                        </form>
+                    </div>
+
+                    <div style="margin: 0 0 0 100px;" class="design__vl">
+                        <div class="circle"></div>
+                        <div class="vl"></div>
+                    </div>
+                </article>
+            </div>
+        </div>  
     </div>
 </body>
 
