--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <li class="home-items"><a href="#tipos">Tipos</a></li>
             <li class="home-items"><a href="#modelos">Modelos</a></li>
             <li class="home-items"><a href="#beneficios">Beneficios</a></li>
-            <li class="home-items"><a href="#conclusion">Conclusion</a></li>
         </ul>
     </nav>
 
@@ -272,7 +271,7 @@
                     </div>
                 </article>
 
-                <article id="conclusion" class="container__conclusion">
+                <article class="container__conclusion">
                     <div class="content-conclusion">
                         <h2 style="padding: 0 0 5vh 0;">Conclusion</h2>
                         <p>Desde una perspectiva inicial, la inteligencia artificial es un tema complejo y
@@ -298,7 +297,7 @@
                             </div>
                             <div>
                                 <label style="display: block;" for="et_nombre">Nombre</label>
-                                <input type="email" id="et_email">
+                                <input type="text" id="et_nombre">
                             </div>
                             
                             <div style="flex: 1; margin: 30px 0 0 0; display: flex; flex-direction: column;">
